fixed settings mobile view
+ .my to theme option
- truncate from .infoElement

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,9 +134,6 @@ button {
         basis-full mb-12
         px-6 md:px-20 py-4 rounded-2xl;
     }
-    .infoElement p, .infoElement {
-        @apply overflow-hidden truncate;
-    }
 
 /* settings css */
     #themeSettings .radio-label {
@@ -225,5 +222,4 @@ button {
     }
     #note .info-block .b-title svg.info {
         @apply block;
-    }
     }
