--- a/public/stylesheets/tcss.css
+++ b/public/stylesheets/tcss.css
@@ -476,22 +476,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: static;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.relative {
-  position: relative;
-}
-
-.top-9 {
-  top: 2.25rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
 .float-left {
   float: left;
 }
@@ -506,9 +490,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1.75rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mx-auto {
@@ -526,21 +510,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: -1rem;
 }
 
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
 }
 
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
 }
 
 .mb-4 {
@@ -571,8 +546,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.25rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .block {
@@ -703,10 +678,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-items: center;
 }
 
-.items-baseline {
-  align-items: baseline;
-}
-
 .items-stretch {
   align-items: stretch;
 }
@@ -735,6 +706,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .whitespace-normal {
   white-space: normal;
+}
+
+.break-normal {
+  overflow-wrap: normal;
+  word-break: normal;
 }
 
 .rounded-2xl {
@@ -768,14 +744,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-card-color {
-  background-color: var(--card-color);
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-slate-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -798,20 +766,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: var(--note-block-color);
 }
 
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-info-block-color {
-  background-color: var(--info-block-color);
-}
-
 .p-1 {
   padding: 0.25rem;
 }
@@ -821,19 +775,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-6 {
@@ -867,10 +816,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 4rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
 }
@@ -885,10 +830,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-4 {
   padding-bottom: 1rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
 }
 
 .align-text-bottom {
@@ -937,29 +878,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-style: italic;
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.text-green-500 {
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-blue-400 {
@@ -972,8 +898,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(212 205 179 / var(--tw-text-opacity));
 }
 
-.text-transparent {
-  color: transparent;
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1068,7 +995,6 @@ body {
   --button-color: rgb(96 165 250);
   --green-button-color: rgb(34 197 94);
   --radio-label-color: rgb(37 99 235);
-  --card-color: rgb(79 70 229);
   --note-block-color: rgb(96 165 250);
   --info-block-color: rgb(20 184 166);
   --hint-block-color: rgb(16 185 129);
@@ -1264,12 +1190,6 @@ body {
   }
 }
 
-.infoElement p, .infoElement {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 /* settings css */
 
 #themeSettings .radio-label {
@@ -1432,51 +1352,6 @@ body {
   display: block;
 }
 
-/* learn note css */
-
-.-hide .-show-child {
-  display: none;
-}
-
-.-hide .-hide-child {
-  display: block;
-}
-
-.-show-child {
-  display: block;
-}
-
-.-hide-child {
-  display: none;
-}
-
-.hidespoilers .spoiler {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  color: transparent;
-}
-
-.hidespoilers .spoiler:hover {
-  color: inherit;
-}
-
-.card-buttons button {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.first\:mt-0:first-child {
-  margin-top: 0px;
-}
-
-.last\:mb-0:last-child {
-  margin-bottom: 0px;
-}
-
 .hover\:font-bold:hover {
   font-weight: 700;
 }
@@ -1522,10 +1397,6 @@ body {
     margin-bottom: 0px;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -1533,11 +1404,6 @@ body {
   .md\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-
-  .md\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
   }
 
   .md\:pb-24 {
